2005-04-25  Ito Kazumitsu <kaz@maczuka.gcd.org>

	* libraries/javalib/java/net/NetworkInterface.java
	(getByName, getByInetAddress): call getNetworkInterfaces()
	so that condensed result may be returned.

2005-04-25  Guilhem Lavaux  <guilhem@kaffe.org>

	* kaffe/kaffevm/classMethod.c
	(buildInterfaceDispatchTable): Put a strong reference on itable2dtable
	to prevent it being freed before the class is actually destroyed.

	* kaffe/kaffevm/gcFuncs.c
	(destroyClass): Remove strong reference on itable2dtable.

2005-04-24  Eric Anholt <eta@lclark.edu>

	* kaffe/kaffevm/exception.c,
	kaffe/kaffevm/locks.c,
	kaffe/kaffevm/locks.h,
	kaffe/kaffevm/string.c,
	kaffe/kaffevm/intrp/checks.h,
	kaffe/kaffevm/intrp/icode.h,
	kaffe/kaffevm/jni/jni-base.c,
	kaffe/kaffevm/jni/jni-helpers.c,
	kaffe/kaffevm/jni/jni.c
	kaffe/kaffevm/jni/jni_funcs.h
	kaffe/kaffevm/kaffe-gc/gc-mem.c:
	Fixed a few warnings.

2005-04-24  Dalibor Topic  <robilad@kaffe.org>

	* config/i386/netbsd1/md.h:
	Include <sys/signal.h> for sigcontext on NetBSD CVS head.

	* kaffe/kaffevm/systems/unix-pthreads/signal.c:
	Include jit-md.h to make sure that exceptionFrame is defined.

2005-04-24  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/systems/unix-pthreads/signal.c 
	(nullException, floatingException): Removed prototypes 
	that were confusing the compiler on NetBSD CVS HEAD.
	(jthread_initexceptions): Moved further to the back 
	to make sure it picks up the declarations of 
	nullException and floatingException.
	
2005-04-24  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath:

	2005-04-23  Tom Tromey  <tromey@redhat.com>

        * javax/swing/text/StyleConstants.java (StyleConstants): Now
        package-private.

2005-04-24  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath:

	2005-04-23  Mark Wielaard  <mark@klomp.org>

        * java/net/URL.java (URL(URL,String,URLStreamHandler)): Add spec
        to MalformedURLException.

2005-04-24  Dalibor Topic  <robilad@kaffe.org>
